--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
         <meta charset="UTF-8">
         <title>Penny Juice</title>
 
+<!--Cherry Bomb for LOGO-->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Cherry+Bomb+One&family=Dangrek&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Knewave&family=Lato&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Merriweather&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playwrite+AU+VIC+Guides&family=Playwrite+NZ+Guides&family=Poppins&family=Rubik+Vinyl&display=swap" rel="stylesheet">
+
 <!--Nunito for headings-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,6 +19,9 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Dangrek&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Knewave&family=Lato&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Merriweather&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playwrite+AU+VIC+Guides&family=Playwrite+NZ+Guides&family=Poppins&family=Rubik+Vinyl&display=swap" rel="stylesheet">
 
+<!--Shopping bag svg-->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=shopping_bag" />
+
         <link href="./style.css" rel="stylesheet"> 
 
 <!--Bootstrap’s compiled CSS-->
@@ -22,7 +30,7 @@
 
     <body>
 <!-- Nav Bar -->
- <div class="container">
+ <!--<div class="container" style="width: 100vw !important;">
  <div class="nav-bar container">
         <div class="container" bis_skin_checked="1">
             <header class="nav-container d-flex flex-wrap justify-content-center border-bottom">
@@ -39,7 +47,26 @@
             </header>
           </div>
   </div>
+</div>-->
+
+
+
+<section class="nav-bar">
+<div class="container" bis_skin_checked="1">
+  <header class="d-flex flex-wrap justify-content-center ">
+    <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+      <img src="./Logo/PENNY JUICE.-1.png" alt="brand logo">
+    </a>
+
+    <ul class="nav-links nav nav-pills align-items-center">
+      <li class="nav-item"><a href="#" class="nav-link">Our Products</a></li>
+      <li class="nav-item"><a href="#" class="nav-link">About Us</a></li>
+      <li class="nav-item"><a href="#" class="nav-link">Contact Us</a></li>
+      <li class="nav-item"><a href="#" class="nav-link"> <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M240-80q-33 0-56.5-23.5T160-160v-480q0-33 23.5-56.5T240-720h80q0-66 47-113t113-47q66 0 113 47t47 113h80q33 0 56.5 23.5T800-640v480q0 33-23.5 56.5T720-80H240Zm0-80h480v-480h-80v80q0 17-11.5 28.5T600-520q-17 0-28.5-11.5T560-560v-80H400v80q0 17-11.5 28.5T360-520q-17 0-28.5-11.5T320-560v-80h-80v480Zm160-560h160q0-33-23.5-56.5T480-800q-33 0-56.5 23.5T400-720ZM240-160v-480 480Z"/></svg> </a></li>
+    </ul>
+  </header>
 </div>
+</section>
 
 <!-- Hero Section -->
  <div class="container">
@@ -60,20 +87,20 @@
 </div>
 
 <!--CTA 1 bootstrap-->
-<div class="container cta">
-<div class="cta px-4 pt-5 my-5 text-center" bis_skin_checked="1">
-  <div class="container">
-  <h1 class="hone display-4 fw-bold text-body-emphasis">Rainbow of Exciting Flavors!</h1>  
-  <div class="col-lg-6 mx-auto" bis_skin_checked="1">
-    <p class="lead mb-4">15 flavors available including 7 color free flavors. Each case contains 6 - ½ gallon bottles of your choice. We’ve designed them especially for childcare, daycare, preschool, basp and extended daycare. Get in touch with us today!</p>
-    <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5" bis_skin_checked="1">
-      <button type="button" class="sec-button btn btn-outline-secondary btn-lg px-4">Learn More</button>
+<section class="cta-bg">
+    <div class="container">
+      <div class="px-4 pt-5 my-5 text-center" bis_skin_checked="1">
+        <h1 class="hone display-4 fw-bold text-body-emphasis">Rainbow of Exciting Flavors!</h1>  
+        <div class="col-lg-6 mx-auto" bis_skin_checked="1">
+          <p class="lead mb-4">15 flavors available including 7 color free flavors. Each case contains 6 - ½ gallon bottles of your choice. We’ve designed them especially for childcare, daycare, preschool, basp and extended daycare. Get in touch with us today!</p>
+          <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5" bis_skin_checked="1">
+            <button type="button" class="sec-button btn btn-outline-secondary btn-lg px-4">Learn More</button>
+          </div>
+        </div>
+         <img src="./Images/CTA pic 1.png" class="img-fluid" alt="Rainbow colors juice bottles" height="537px" loading="lazy">
+      </div>
     </div>
-  </div>
-      <img src="./Images/CTA pic 1.png" class="img-fluid" alt="Rainbow colors juice bottles" height="537px" loading="lazy">
-</div>
-</div>
-</div>
+</section>
 
 <!--Cta human
 <div class="flex-container">
@@ -122,8 +149,9 @@
 </div>
 
 <!--footer-->
+<section class="footer-bg">
 <div class="container footer" bis_skin_checked="1" style="width: 100vw !important;">
-  <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5">
+  <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5" style="padding-top: 100px !important;">
     <div class="col mb-3" bis_skin_checked="1">
       <a href="/" class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none" aria-label="Bootstrap">
         <img src="./Logo/PENNY JUICE..png" height="36px">
@@ -156,7 +184,7 @@
   </footer>
 
   <!--cut and paste-->
-  <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4" bis_skin_checked="1">
+  <div class="d-flex flex-column flex-sm-row justify-content-between py-4 mt-4" bis_skin_checked="1">
     <p class="para" style="font-size: 14px !important; color: rgba(14, 21, 27, 0.7) !important;">© 2025 PennyJuice, Inc. All rights reserved.</p>
     <ul class="list-unstyled d-flex">
       <li class="ms-3"><a class="link-body-emphasis" href="#" aria-label="Instagram"><img src="./icons/Group 6.png" height="34px"></a></li>
@@ -165,7 +193,7 @@
     </ul>
   </div>
 </div>
-
+</section>
 
 
 
